# hannukah-of-data-django

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/app/: admin.py  back_0006_auto_20250422_0234.py  models.py  tests.py  views.py
src/app/fixtures/: customers.json
src/app/migrations/: 0001_initial.py  0002_alter_customer_customerid.py  0002_remove_ordersitem_id_ordersitem_pk_and_more.py  0003_alter_order_orderid_alter_product_sku.py  0004_order_customer.py  0005_auto_20250421_2255.py  0006_remove_ordersitem_pk_ordersitem_id_ordersitem_order_and_more.py  0007_auto_20250422_0528.py
src/app/templates/: day04.html  output.html
src/hannukah_of_data/: asgi.py  settings.py  urls.py  wsgi.py
