[project]
name = "hannukah-of-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Lisitsa",email = "michael.lisitsa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-types (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "hannukah_of_data", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
